@@ -2087,6 +2087,7 @@ version 9.43.1 (2022-09-09)
     * Updates Nimbus JOSE+JWT to 9.24.4
 
 version 9.44 (2022-10-09)
+    * Updates EntityStatement to OpenID Connect Federation 1.0 - draft 23.
     * Updates EntityStatementClaimsSet to OpenID Connect Federation 1.0 - draft
       23.
     * Renames FederationMetadataType to EntityType.
